// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton interaction with Skeleton component 1`] = `
<DocumentFragment>
  <div
    class="ant-slider"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="left: 0%; width: 0%;"
    />
    <div
      class="ant-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="ant-slider-handle"
      role="slider"
      style="left: 0%; transform: translateX(-50%);"
      tabindex="0"
    />
    <div
      class="ant-slider-mark"
    />
  </div>
</DocumentFragment>
`;

exports[`Slider interaction with Slider component 1`] = `
<div
  class="ant-slider"
>
  <div
    class="ant-slider-rail"
  />
  <div
    class="ant-slider-track"
    style="left: 0%; width: 0%;"
  />
  <div
    class="ant-slider-step"
  />
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="ant-slider-handle"
    role="slider"
    style="left: 0%; transform: translateX(-50%);"
    tabindex="0"
  />
  <div
    class="ant-slider-mark"
  />
</div>
`;
